2007-05-15  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixxml/ServletManager.java: Implemented new
	ExceptionConfig management. The old behaviour was strange and
	buggy: ExceptionConfig objects were retrieved by accident,
	because they were hold in a Map and were retrieved by iterating
	over the Map's keys and doing an instanceof test. Therefore it
	could happen that different ExceptionConfig objects were
	returned for the same Exception class. Now retrieving is done
	by first trying to get the ExceptionConfig object by key, if
	none is found an iteration with instanceof testing is done.
	The iteration order is still undefined, because the underlying
	properties are not ordered.

2007-05-15  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixcore/webservice/ServiceRuntime.java: throw
	Exception if session context can't be retrieved

2007-05-14  Martin Leidig  <mleidig@schlund.de>

	Fixed race condition in iframe fallback handling.
	Changed fallback HTML element names to allow simultaneous
	usage of both request implementations:

	* projects/core/script/httpRequest.js
	* projects/core/script/xmlRequest.js

	Added service request dumping support (especially for 
	improved, more verbose, exception reporting).

	* src/de/schlund/pfixcore/webservice/ServiceRuntime.java
	* src/de/schlund/pfixcore/webservice/ServiceRequest.java
	* src/de/schlund/pfixcore/webservice/jsonws/JSONWSProcessor.java
	* src/de/schlund/pfixcore/webservice/HttpServiceRequest.java
	* src/de/schlund/pfixcore/webservice/ServiceRequestWrapper.java

2007-05-14  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixxml/DerefServlet.java (handleLink): 
	Added code that does a javascript redirect in case the HTTP refresh
	redirect does not work (ugly IE7-workaround).

2007-05-11  Martin Leidig  <mleidig@schlund.de>

	Enable native XMLHttpRequest usage by default for Opera (instead
	of iframe fallback), because current versions don't have problems
	any longer.
