@@ -1,3 +1,10 @@
+2007-05-18  Sebastian Marsching  <sebastian.marsching@1und1.de>
+
+	* src/de/schlund/pfixxml/AbstractContextServletFilter.java: 
+	* projects/core/conf/web.xml: 
+	* projects/core/xsl/create_webxml.xsl: 
+	Adding support for servlet filters.
+
 2007-05-15  Martin Leidig  <mleidig@schlund.de>
 
 	* src/de/schlund/pfixxml/ServletManager.java: Implemented new
